HBASE-1360 move up to Thrift 0.2.0
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@901398 13f79535-47bb-0310-9956-ffa450edef68